# uverd-soundstream

./: .gitignore  ACDNET_README.md  CLAUDE.md  README.md  TINYSTREAM.md  acdnet_dataset.py  acdnet_micro.py  acdnet_model.py  dataset.py  discriminator.py  download_datasets.sh  download_xenocanto.py  infer.py  losses.py  main.py  model.py  model_tiny.py  pyproject.toml  requirements.txt  requirements_acdnet.txt  run_acdnet.sh  test_acdnet.py  train.py  train.sh  train_acdnet.py  train_tiny.sh
datasets/: README.md
docs/: CHEATSHEET.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICKSTART.md
evaluation/: README.md  evaluate.py  metrics.py  report_generator.py  visualizations.py
evaluation/templates/: report.html
