[project]
name = "uverd-soundstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "pesq>=0.0.4",
    "plotly>=6.4.0",
    "pystoi>=0.4.1",
    "scipy>=1.16.3",
    "tensorboard>=2.14.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec>=0.8.1",
    "tqdm>=4.65.0",
]
